--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -3,13 +3,11 @@
   "version": "1.0.0",
   "license": "MIT",
 	"scripts": {
-		"test": "node src/core.js"
+		"build": "browserify -r ./lib/enslogin.js -o public/js/bundle.js"
 	},
   "dependencies": {
     "ethers": "^4.0.33",
-    "ipfs": "^0.37.0"
-  },
-  "devDependencies": {
+    "ipfs": "^0.37.0",
     "ipfs-http-client": "^33.1.1"
   }
 }
