remove authereum from uniswap frontend

--- a/packages/uniswap/package.json
+++ b/packages/uniswap/package.json
@@ -8,8 +8,8 @@
     "@reach/dialog": "^0.2.8",
     "@reach/tooltip": "^0.2.0",
     "@reach/utils": "^0.2.3",
-    "authereum": "0.0.3-beta.50",
     "copy-to-clipboard": "^3.2.0",
+    "ens-login-sdk": "1.0.0",
     "escape-string-regexp": "^2.0.0",
     "ethers": "^4.0.28",
     "i18next": "^15.0.9",
