--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.3.3",
     "ENSLogin": "1.0.0",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
