Complete switch to ropsten

--- a/packages/uniswap/.env.local
+++ b/packages/uniswap/.env.local
@@ -1,2 +1,2 @@
-REACT_APP_NETWORK_ID="42"
-REACT_APP_NETWORK_URL="https://kovan.infura.io/v3/7fb8693951ed47c0b0e174ffad8b82b5"
+REACT_APP_NETWORK_ID="3"
+REACT_APP_NETWORK_URL="https://ropsten.infura.io/v3/7fb8693951ed47c0b0e174ffad8b82b5"
