--- a/packages/uniswap/package.json
+++ b/packages/uniswap/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.5.5",
+    "@material-ui/core": "^4.3.3",
     "@reach/dialog": "^0.2.8",
     "@reach/tooltip": "^0.2.0",
     "@reach/utils": "^0.2.3",
